--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
 body {
-  padding-top: 5rem;  
+  padding-top: 5rem;
+}
+
+.calendar-month span {
+  height: 30px;
+  width: 30px;
+  background: #ccc;
+  display: inline-block;
+  text-align: center;
 }
